@@ -16,15 +16,14 @@
 package com.android.tools.idea.devicemanager.physicaltab;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 
 import com.android.sdklib.AndroidVersion;
-import com.android.tools.idea.devicemanager.Key;
-import com.android.tools.idea.devicemanager.SerialNumber;
 import com.android.tools.idea.testing.swing.TableModelEventArgumentMatcher;
-import com.google.common.collect.Lists;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
+import java.util.Set;
 import javax.swing.event.TableModelEvent;
 import javax.swing.event.TableModelListener;
 import javax.swing.table.TableModel;
@@ -42,19 +41,19 @@ public final class PhysicalDeviceTableModelTest {
     PhysicalDeviceTableModel model = new PhysicalDeviceTableModel();
 
     // Assert
-    assertEquals(Collections.emptyList(), model.getCombinedDevices());
+    assertEquals(List.of(), model.getCombinedDevices());
   }
 
   @Test
   public void newPhysicalDeviceTableModelDevicesIsntEmpty() {
     // Arrange
-    List<PhysicalDevice> devices = Arrays.asList(TestPhysicalDevices.GOOGLE_PIXEL_3, TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_5);
+    Collection<PhysicalDevice> devices = List.of(TestPhysicalDevices.GOOGLE_PIXEL_3, TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_5);
 
     // Act
     PhysicalDeviceTableModel model = new PhysicalDeviceTableModel(devices);
 
     // Assert
-    assertEquals(Arrays.asList(TestPhysicalDevices.GOOGLE_PIXEL_3, TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_5), model.getCombinedDevices());
+    assertEquals(devices, model.getCombinedDevices());
   }
 
   @Test
@@ -65,7 +64,7 @@ public final class PhysicalDeviceTableModelTest {
     PhysicalDeviceTableModel model = new PhysicalDeviceTableModel();
     model.addTableModelListener(listener);
 
-    List<PhysicalDevice> devices = Collections.singletonList(TestPhysicalDevices.GOOGLE_PIXEL_3);
+    List<PhysicalDevice> devices = List.of(TestPhysicalDevices.GOOGLE_PIXEL_3);
 
     // Act
     model.setDevices(devices);
@@ -82,14 +81,14 @@ public final class PhysicalDeviceTableModelTest {
     // Arrange
     TableModelListener listener = Mockito.mock(TableModelListener.class);
 
-    PhysicalDeviceTableModel model = new PhysicalDeviceTableModel(Lists.newArrayList(TestPhysicalDevices.GOOGLE_PIXEL_3));
+    PhysicalDeviceTableModel model = new PhysicalDeviceTableModel(List.of(TestPhysicalDevices.GOOGLE_PIXEL_3));
     model.addTableModelListener(listener);
 
     // Act
     model.addOrSet(TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_5);
 
     // Assert
-    assertEquals(Arrays.asList(TestPhysicalDevices.GOOGLE_PIXEL_3, TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_5), model.getCombinedDevices());
+    assertEquals(List.of(TestPhysicalDevices.GOOGLE_PIXEL_3, TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_5), model.getCombinedDevices());
     Mockito.verify(listener).tableChanged(ArgumentMatchers.argThat(new TableModelEventArgumentMatcher(new TableModelEvent(model))));
   }
 
@@ -97,7 +96,7 @@ public final class PhysicalDeviceTableModelTest {
   public void addOrSetModelRowIndexDoesntEqualNegativeOne() {
     // Arrange
     TableModelListener listener = Mockito.mock(TableModelListener.class);
-    List<PhysicalDevice> devices = Arrays.asList(TestPhysicalDevices.GOOGLE_PIXEL_3, TestPhysicalDevices.GOOGLE_PIXEL_5);
+    Collection<PhysicalDevice> devices = List.of(TestPhysicalDevices.GOOGLE_PIXEL_3, TestPhysicalDevices.GOOGLE_PIXEL_5);
 
     PhysicalDeviceTableModel model = new PhysicalDeviceTableModel(devices);
     model.addTableModelListener(listener);
@@ -106,55 +105,7 @@ public final class PhysicalDeviceTableModelTest {
     model.addOrSet(TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_5);
 
     // Assert
-    assertEquals(Arrays.asList(TestPhysicalDevices.GOOGLE_PIXEL_3, TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_5), model.getCombinedDevices());
-    Mockito.verify(listener).tableChanged(ArgumentMatchers.argThat(new TableModelEventArgumentMatcher(new TableModelEvent(model))));
-  }
-
-  @Test
-  public void setNameOverride() {
-    // Arrange
-    Key domainName = new DomainName("adb-86UX00F4R-cYuns7._adb-tls-connect._tcp");
-
-    PhysicalDevice googlePixel3WithDomainName = new PhysicalDevice.Builder()
-      .setKey(domainName)
-      .setName("Google Pixel 3")
-      .setTarget("Android 12.0")
-      .setAndroidVersion(new AndroidVersion(31))
-      .build();
-
-    TableModelListener listener = Mockito.mock(TableModelListener.class);
-
-    PhysicalDeviceTableModel model = new PhysicalDeviceTableModel(Arrays.asList(TestPhysicalDevices.GOOGLE_PIXEL_3,
-                                                                                googlePixel3WithDomainName,
-                                                                                TestPhysicalDevices.GOOGLE_PIXEL_5));
-
-    model.addTableModelListener(listener);
-
-    Key serialNumber = new SerialNumber("86UX00F4R");
-
-    // Act
-    model.setNameOverride(serialNumber, "Name Override");
-
-    // Assert
-    Object expectedDevice1 = new PhysicalDevice.Builder()
-      .setKey(serialNumber)
-      .setName("Google Pixel 3")
-      .setNameOverride("Name Override")
-      .setTarget("Android 12.0")
-      .setAndroidVersion(new AndroidVersion(31))
-      .build();
-
-    Object expectedDevice2 = new PhysicalDevice.Builder()
-      .setKey(domainName)
-      .setName("Google Pixel 3")
-      .setNameOverride("Name Override")
-      .setTarget("Android 12.0")
-      .setAndroidVersion(new AndroidVersion(31))
-      .build();
-
-    assertEquals(Arrays.asList(expectedDevice1, expectedDevice2, TestPhysicalDevices.GOOGLE_PIXEL_5), model.getDevices());
-    assertEquals(Arrays.asList(expectedDevice1, TestPhysicalDevices.GOOGLE_PIXEL_5), model.getCombinedDevices());
-
+    assertEquals(List.of(TestPhysicalDevices.GOOGLE_PIXEL_3, TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_5), model.getCombinedDevices());
     Mockito.verify(listener).tableChanged(ArgumentMatchers.argThat(new TableModelEventArgumentMatcher(new TableModelEvent(model))));
   }
 
@@ -163,14 +114,14 @@ public final class PhysicalDeviceTableModelTest {
     // Arrange
     TableModelListener listener = Mockito.mock(TableModelListener.class);
 
-    PhysicalDeviceTableModel model = new PhysicalDeviceTableModel(Lists.newArrayList(TestPhysicalDevices.GOOGLE_PIXEL_3));
+    PhysicalDeviceTableModel model = new PhysicalDeviceTableModel(List.of(TestPhysicalDevices.GOOGLE_PIXEL_3));
     model.addTableModelListener(listener);
 
     // Act
     model.remove(TestPhysicalDevices.GOOGLE_PIXEL_3_KEY);
 
     // Assert
-    Object devices = Collections.emptyList();
+    Object devices = List.of();
 
     assertEquals(devices, model.getDevices());
     assertEquals(devices, model.getCombinedDevices());
@@ -188,13 +139,13 @@ public final class PhysicalDeviceTableModelTest {
       .setAndroidVersion(new AndroidVersion(31))
       .build();
 
-    List<PhysicalDevice> devices = Arrays.asList(TestPhysicalDevices.GOOGLE_PIXEL_3, domainNameGooglePixel3);
+    Collection<PhysicalDevice> devices = List.of(TestPhysicalDevices.GOOGLE_PIXEL_3, domainNameGooglePixel3);
 
     // Act
     PhysicalDeviceTableModel model = new PhysicalDeviceTableModel(devices);
 
     // Assert
-    assertEquals(Collections.singletonList(TestPhysicalDevices.GOOGLE_PIXEL_3), model.getCombinedDevices());
+    assertEquals(List.of(TestPhysicalDevices.GOOGLE_PIXEL_3), model.getCombinedDevices());
   }
 
   @Test
@@ -207,19 +158,19 @@ public final class PhysicalDeviceTableModelTest {
       .setAndroidVersion(new AndroidVersion(31))
       .build();
 
-    List<PhysicalDevice> devices = Arrays.asList(TestPhysicalDevices.GOOGLE_PIXEL_5, domainNameGooglePixel3);
+    Collection<PhysicalDevice> devices = List.of(TestPhysicalDevices.GOOGLE_PIXEL_5, domainNameGooglePixel3);
 
     // Act
     PhysicalDeviceTableModel model = new PhysicalDeviceTableModel(devices);
 
     // Assert
-    assertEquals(Arrays.asList(domainNameGooglePixel3, TestPhysicalDevices.GOOGLE_PIXEL_5), model.getCombinedDevices());
+    assertEquals(List.of(domainNameGooglePixel3, TestPhysicalDevices.GOOGLE_PIXEL_5), model.getCombinedDevices());
   }
 
   @Test
   public void getRowCount() {
     // Arrange
-    TableModel model = new PhysicalDeviceTableModel(Collections.singletonList(TestPhysicalDevices.GOOGLE_PIXEL_3));
+    TableModel model = new PhysicalDeviceTableModel(List.of(TestPhysicalDevices.GOOGLE_PIXEL_3));
 
     // Act
     int count = model.getRowCount();
@@ -229,9 +180,57 @@ public final class PhysicalDeviceTableModelTest {
   }
 
   @Test
+  public void isCellEditableCaseActivateDeviceFileExplorerWindowModelColumnIndexDeviceIsOnline() {
+    // Arrange
+    TableModel model = new PhysicalDeviceTableModel(List.of(TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_5));
+
+    // Act
+    boolean editable = model.isCellEditable(0, PhysicalDeviceTableModel.ACTIVATE_DEVICE_FILE_EXPLORER_WINDOW_MODEL_COLUMN_INDEX);
+
+    // Assert
+    assertTrue(editable);
+  }
+
+  @Test
+  public void isCellEditableCaseActivateDeviceFileExplorerWindowModelColumnIndex() {
+    // Arrange
+    TableModel model = new PhysicalDeviceTableModel(List.of(TestPhysicalDevices.GOOGLE_PIXEL_5));
+
+    // Act
+    boolean editable = model.isCellEditable(0, PhysicalDeviceTableModel.ACTIVATE_DEVICE_FILE_EXPLORER_WINDOW_MODEL_COLUMN_INDEX);
+
+    // Assert
+    assertFalse(editable);
+  }
+
+  @Test
+  public void isCellEditableCaseRemoveModelColumnIndexDeviceIsOnline() {
+    // Arrange
+    TableModel model = new PhysicalDeviceTableModel(List.of(TestPhysicalDevices.ONLINE_GOOGLE_PIXEL_5));
+
+    // Act
+    boolean editable = model.isCellEditable(0, PhysicalDeviceTableModel.REMOVE_MODEL_COLUMN_INDEX);
+
+    // Assert
+    assertFalse(editable);
+  }
+
+  @Test
+  public void isCellEditableCaseRemoveModelColumnIndex() {
+    // Arrange
+    TableModel model = new PhysicalDeviceTableModel(List.of(TestPhysicalDevices.GOOGLE_PIXEL_5));
+
+    // Act
+    boolean editable = model.isCellEditable(0, PhysicalDeviceTableModel.REMOVE_MODEL_COLUMN_INDEX);
+
+    // Assert
+    assertTrue(editable);
+  }
+
+  @Test
   public void getValueAtDeviceModelColumnIndex() {
     // Arrange
-    TableModel model = new PhysicalDeviceTableModel(Collections.singletonList(TestPhysicalDevices.GOOGLE_PIXEL_3));
+    TableModel model = new PhysicalDeviceTableModel(List.of(TestPhysicalDevices.GOOGLE_PIXEL_3));
 
     // Act
     Object value = model.getValueAt(0, PhysicalDeviceTableModel.DEVICE_MODEL_COLUMN_INDEX);
@@ -243,7 +242,7 @@ public final class PhysicalDeviceTableModelTest {
   @Test
   public void getValueAtApiModelColumnIndex() {
     // Arrange
-    TableModel model = new PhysicalDeviceTableModel(Collections.singletonList(TestPhysicalDevices.GOOGLE_PIXEL_3));
+    TableModel model = new PhysicalDeviceTableModel(List.of(TestPhysicalDevices.GOOGLE_PIXEL_3));
 
     // Act
     Object value = model.getValueAt(0, PhysicalDeviceTableModel.API_MODEL_COLUMN_INDEX);
@@ -255,12 +254,12 @@ public final class PhysicalDeviceTableModelTest {
   @Test
   public void getValueAtTypeModelColumnIndex() {
     // Arrange
-    TableModel model = new PhysicalDeviceTableModel(Collections.singletonList(TestPhysicalDevices.GOOGLE_PIXEL_3));
+    TableModel model = new PhysicalDeviceTableModel(List.of(TestPhysicalDevices.GOOGLE_PIXEL_3));
 
     // Act
     Object value = model.getValueAt(0, PhysicalDeviceTableModel.TYPE_MODEL_COLUMN_INDEX);
 
     // Assert
-    assertEquals(Collections.EMPTY_SET, value);
+    assertEquals(Set.of(), value);
   }
 }
